# testcalc

./: '  .travis.sh  .travis.yml  CMakeLists.txt  azure-pipelines.yml  doxygen.cfg  error.hpp  main.cpp  math.base.cpp  math.base.hpp  math.func.cpp  math.func.hpp  math.util.cpp  math.util.hpp  test.cpp
.circleci/: config.yml
